# starpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cache.hpp  chroot_util.hpp  config.hpp  hook.hpp  info.hpp  install.hpp  list.hpp  remove.hpp  repository.hpp  search.hpp  spaceship.hpp  update.hpp  utils.hpp
src/: cache.cpp  chroot_util.cpp  config.cpp  hook.cpp  info.cpp  install.cpp  list.cpp  main.cpp  remove.cpp  repository.cpp  search.cpp  spaceship.cpp  update.cpp  utils.cpp
